--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "express-session": "^1.11.3",
     "method-override": "^2.3.5",
     "mongoose": "^4.1.4",
-    "morgan": "^1.6.1",
-    "passport": "^0.3.0",
-    "passport-local": "^1.0.0"
+    "morgan": "^1.6.1"
   }
 }
