--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.13.3",
     "method-override": "^2.3.5",
     "mongoose": "^4.1.4",
+    "mongoose-unique-validator": "^0.6.1",
     "morgan": "^1.6.1"
   }
 }
