--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "method-override": "^2.3.5",
     "mongoose": "^4.1.4",
     "morgan": "^1.6.1"
+  },
+  "devDependencies": {
+    "should": "^7.1.1",
+    "supertest": "^1.1.0"
   }
 }
