--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "morgan": "^1.6.1"
   },
   "devDependencies": {
+    "gulp": "^3.9.0",
     "should": "^7.1.1",
     "supertest": "^1.1.0"
   }
