--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-env": "^0.2.0",
+    "gulp-mocha": "^2.2.0",
     "should": "^7.1.1",
     "supertest": "^1.1.0"
   }
