--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.0",
     "gulp-env": "^0.2.0",
     "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.4",
     "should": "^7.1.1",
     "supertest": "^1.1.0"
   }
